Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-103387

QLibrary doesn't load() after a previously failed load()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.5.0 FF
    • 6.3.0
    • Core: Plugins
    • None
    • Linux/Yocto
    • 823b7c7bce1aae5d413c9540c4916c7b1f393300 (qtbase/dev)

      The fix from QTBUG-87328 seems no longer work on Yocto kirkstone with meta-qt6 6.3 Branch.

      https://codereview.qt-project.org/c/qt/qtserialbus/+/317411

      The libsocketcan.so Link does not exist on the device, and strace shows the following:

      openat(AT_FDCWD, "/usr/lib/libsocketcan.so", O_RDONLY|O_LARGEFILE|O_CLOEXEC) = -1 ENOENT (No such file or directory)
      munmap(0x76f73000, 13287)               = 0
      openat(AT_FDCWD, "/usr/lib/libsocketcan", O_RDONLY|O_LARGEFILE|O_CLOEXEC) = -1 ENOENT (No such file or directory)
      openat(AT_FDCWD, "/etc/ld.so.cache", O_RDONLY|O_LARGEFILE|O_CLOEXEC) = 4
      statx(4, "", AT_STATX_SYNC_AS_STAT|AT_NO_AUTOMOUNT|AT_EMPTY_PATH, STATX_BASIC_STATS, {stx_mask=STATX_BASIC_STATS|STATX_MNT_ID, stx_attributes=0, stx_mode=S_IFREG|0644, stx_size=13287, ...}) = 0
      mmap2(NULL, 13287, PROT_READ, MAP_PRIVATE, 4, 0) = 0x76f73000
      close(4)                                = 0
      openat(AT_FDCWD, "/lib/libsocketcan", O_RDONLY|O_LARGEFILE|O_CLOEXEC) = -1 ENOENT (No such file or directory)
      openat(AT_FDCWD, "/usr/lib/libsocketcan", O_RDONLY|O_LARGEFILE|O_CLOEXEC) = -1 ENOENT (No such file or directory)
      munmap(0x76f73000, 13287)               = 0
      openat(AT_FDCWD, "/usr/lib/socketcan.so", O_RDONLY|O_LARGEFILE|O_CLOEXEC) = -1 ENOENT (No such file or directory)
      openat(AT_FDCWD, "/etc/ld.so.cache", O_RDONLY|O_LARGEFILE|O_CLOEXEC) = 4
      statx(4, "", AT_STATX_SYNC_AS_STAT|AT_NO_AUTOMOUNT|AT_EMPTY_PATH, STATX_BASIC_STATS, {stx_mask=STATX_BASIC_STATS|STATX_MNT_ID, stx_attributes=0, stx_mode=S_IFREG|0644, stx_size=13287, ...}) = 0
      mmap2(NULL, 13287, PROT_READ, MAP_PRIVATE, 4, 0) = 0x76f73000
      close(4)                                = 0
      openat(AT_FDCWD, "/lib/socketcan.so", O_RDONLY|O_LARGEFILE|O_CLOEXEC) = -1 ENOENT (No such file or directory)
      openat(AT_FDCWD, "/usr/lib/socketcan.so", O_RDONLY|O_LARGEFILE|O_CLOEXEC) = -1 ENOENT (No such file or directory)
      munmap(0x76f73000, 13287)               = 0
      openat(AT_FDCWD, "/usr/lib/socketcan", O_RDONLY|O_LARGEFILE|O_CLOEXEC) = -1 ENOENT (No such file or directory)
      openat(AT_FDCWD, "/etc/ld.so.cache", O_RDONLY|O_LARGEFILE|O_CLOEXEC) = 4
      statx(4, "", AT_STATX_SYNC_AS_STAT|AT_NO_AUTOMOUNT|AT_EMPTY_PATH, STATX_BASIC_STATS, {stx_mask=STATX_BASIC_STATS|STATX_MNT_ID, stx_attributes=0, stx_mode=S_IFREG|0644, stx_size=13287, ...}) = 0
      mmap2(NULL, 13287, PROT_READ, MAP_PRIVATE, 4, 0) = 0x76f73000
      close(4)                                = 0
      openat(AT_FDCWD, "/lib/socketcan", O_RDONLY|O_LARGEFILE|O_CLOEXEC) = -1 ENOENT (No such file or directory)
      openat(AT_FDCWD, "/usr/lib/socketcan", O_RDONLY|O_LARGEFILE|O_CLOEXEC) = -1 ENOENT (No such file or directory)
      munmap(0x76f73000, 13287)               = 0
      write(2, "qt.canbus.plugins.socketcan: Unk"..., 43qt.canbus.plugins.socketcan: Unknown error
      ) = 43
      write(2, "qt.canbus.plugins.socketcan: Can"..., 119qt.canbus.plugins.socketcan: Cannot load library libsocketcan, some functionality will not be available.
      Unknown error
      ) = 119
      write(2, "after create\n", 13after create
      )          = 13
      socket(AF_CAN, SOCK_RAW|SOCK_NONBLOCK, CAN_RAW) = 4
      ioctl(4, SIOCGIFINDEX, {ifr_name="can0", ifr_ifindex=2}) = 0
      bind(4, {sa_family=AF_CAN, sa_data="\0\0\2\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"}, 24) = 0
      setsockopt(4, SOL_CAN_RAW, CAN_RAW_LOOPBACK, [1], 4) = 0
      setsockopt(4, SOL_CAN_RAW, CAN_RAW_RECV_OWN_MSGS, [0], 4) = 0
      setsockopt(4, SOL_CAN_RAW, CAN_RAW_ERR_FILTER, [536870911], 4) = 0
      setsockopt(4, SOL_CAN_RAW, CAN_RAW_FD_FRAMES, [0], 4) = 0
      write(2, "qt.canbus.plugins.socketcan: Fun"..., 74qt.canbus.plugins.socketcan: Function can_set_bitrate() is not available.
      ) = 74
      write(2, "qt.canbus.plugins.socketcan: Can"..., 75qt.canbus.plugins.socketcan: Cannot apply parameter: 4 with value: 500000.
      ) = 75
      write(2, "config\n", 7config
      )                 = 7
      write(2, "qt.canbus.plugins.socketcan: Fun"..., 74qt.canbus.plugins.socketcan: Function can_set_bitrate() is not available.
      
      

        For Gerrit Dashboard: QTBUG-103387
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            matthias_klein Matthias Klein
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes